@@ -1,3 +1,10 @@
+2014-01-10  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mmg: bug fix: mkvmerge's file identification is written to a
+        temporary file with --redirect-output and from there into mmg
+        instead of directly from mkvmerge. This prevents from character
+        re-coding done by wxWidgets 3.0.0 on Windows. Fixes #959.
+
 2014-01-09  Moritz Bunkus  <moritz@bunkus.org>
 
         * installer: enhancement: the architecture (32bit vs 64bit) is
